add option to download all active units as csv